patch bookCollection
